--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
     <h1><u>Steve Wozniak</u></h1>
     <link rel="stylesheet" href="StyleSheet.css">
-    <img src="sw.jpeg" alt="SW.com" style="width:400px;height:400px;">
-    <img src="sw2.jpeg" alt="SW.com" style="width:400px;height:400px;">
-    <img src="woz.jpeg" alt="SW.com" style="width:400px;height:400px;">
+    <img src="/images/sw.jpeg" alt="SW.com" style="width:400px;height:400px;">
+    <img src="/images/sw2.jpeg" alt="SW.com" style="width:400px;height:400px;">
+    <img src="/imageswoz.jpeg" alt="SW.com" style="width:400px;height:400px;">
 
     <blockquote> Steve Wozniak is an American computer scientist and credited as one of the founders of Apple. Born in 1950, he is the son of an engineer at Lockheed Martin, which sparked his interest of electronics at an early age (Biography, 2019). </blockquote>
     <blockquote>While attending UC Berkley, he created the “Blue Box”, a device that allows long-distance calling without paying the long-distance fee. He dropped out for an intern position at Hewlett-Packard.</blockquote>
